<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:layout_margin="20dp"
    android:padding="10dp"
    android:id="@+id/cl_root_layout"
    >
    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:background="@drawable/border_radius"
        android:backgroundTint="@color/bg_header"
        android:gravity="center"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/et_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/et_price_hint"
        android:inputType="number"
        android:textSize="25sp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tv_asking_service_quality"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_asking_service"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_price"
        />

    <RadioGroup
        android:id="@+id/rg_option_of_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@id/tv_asking_service_quality"
        app:layout_constraintTop_toBottomOf="@id/tv_asking_service_quality"
        >
        <RadioButton
            android:id="@+id/rbtn_amazing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbtn_title_amazing"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:checked="true"
            />
        <RadioButton
            android:id="@+id/rbtn_good"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbtn_title_good"
            android:textSize="20sp"
            android:textColor="@color/black"
            />
        <RadioButton
            android:id="@+id/rbtn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbtn_title_ok"
            android:textSize="20sp"
            android:textColor="@color/black"
            />
        <RadioButton
            android:id="@+id/rbtn_other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbtn_title_other"
            android:textSize="20sp"
            android:textColor="@color/black"
            />

    </RadioGroup>


    <EditText
        android:id="@+id/et_other_radiobutton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:hint="@string/et_hint_other"
        android:visibility="gone"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/rg_option_of_tip"
        app:layout_constraintTop_toBottomOf="@+id/rg_option_of_tip" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/swt_round"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/qsn_ask_for_round"
        android:textSize="20sp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/rg_option_of_tip"
        app:layout_constraintTop_toBottomOf="@+id/et_other_radiobutton" />

    <Button
        android:id="@+id/btn_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/btn_text_calculate"
        android:background="@drawable/border_button"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/swt_round" />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/text_result"
        android:textSize="18sp"
        android:layout_margin="10dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:background="@drawable/border_radius"
        android:backgroundTint="@color/show_result"
        app:layout_constraintTop_toBottomOf="@id/btn_calculate"
        app:layout_constraintBottom_toTopOf="@id/btn_reset"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
    />

    <Button
        android:id="@+id/btn_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/border_button"
        android:text="@string/btn_reset_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>